<resources>
    <string name="app_name">SelfmadeMoney</string>
    <string name="male_gender">Männlich</string>
    <string name="female_gender">Weiblich</string>

    <!-- Intent Keys (LoginActivity:signIn) -->
    <string name="intent_userId">intentUserId</string>

    <!-- StartseiteAuftraegeViewAdapter -->
    <string name="lbl_username">Username</string>
    <string name="lbl_place">Place</string>

    <!-- activity_login -->
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>

    <!-- fragment_auftrag -->
    <string name="lblTitle">Title:</string>
    <string name="lblSalary">Salary:</string>
    <string name="lblOrderStart">Order Start:</string>
    <string name="lblLocation">Location:</string>
    <string name="lblDescription">Description:</string>
    <string name="btnCreate">Create</string>
    <string name="btnReset">Reset</string>
    <string name="btnAbort">Abort</string>

    <!-- fragment_profil -->
    <string name="lblMemberSince">Member since</string>
    <string name="lblOrders">Orders</string>
    <string name="lblProfileEmailAdress">E-Mail Adress</string>
    <string name="lblProfileFullName">Firstname Surname</string>
    <string name="lblProfilePlace">Place</string>
    <string name="lblProfileDescription">Description</string>

    <!-- fragment_meine_auftraege -->
    <string name="lblOngoingOrders">Ongoing orders</string>
    <string name="lblCompletedOrders">Completed orders</string>

    <!-- meine_auftrage_row_item -->
    <string name="lblRowTitle">Title</string>
    <string name="lblRowSalary">Salary in €</string>

    <!-- startseite_auftraege_row_item -->
    <string name="lblStartTime">Start time</string>
    <string name="lblCreationDate">Creation Date</string>
    <string name="lblStartRowSalary">Salary</string>
    <string name="btnMakeAnInquiry">Make an inquiry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottum">BottumActivity</string>
    <string name="title_startseite">Startseite</string>
    <string name="title_auftrag">Auftrag</string>
    <string name="title_meineAuftraege">Meine Aufträge</string>
    <string name="title_profil">Profil</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
